// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFrame should render align block correctly 1`] = `
<div
  className="inline-content text-frame block"
>
  <h3
    className="outline"
  >
    140%
  </h3>
</div>
`;

exports[`TextFrame should render align right correctly 1`] = `
<div
  className="inline-content text-frame right"
>
  <h3
    className="outline"
  >
    140%
  </h3>
</div>
`;

exports[`TextFrame should render align right correctly 2`] = `
<div
  className="inline-content text-frame right"
>
  <h3
    className="outline"
  >
    140%
  </h3>
</div>
`;

exports[`TextFrame should render with image align block correctly 1`] = `
<div
  className="inline-content text-frame block"
>
  <h3
    className="outline"
  >
    140%
  </h3>
  <figure
    className="fd-teaser-figure"
  >
    <picture>
      <source
        media="(max-width: 640px)"
        srcSet="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=600 1x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1200 2x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1800 3x"
      />
      <source
        media="(max-width: 860px)"
        srcSet="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=361 1x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=722 2x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1083 3x"
      />
      <img
        alt="Het zwarte schaap: Anglo Irish"
        src="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1280"
      />
    </picture>
  </figure>
</div>
`;

exports[`TextFrame should render with image align right correctly 1`] = `
<div
  className="inline-content text-frame right"
>
  <h3
    className="outline"
  >
    140%
  </h3>
  <figure
    className="fd-teaser-figure"
  >
    <picture>
      <source
        media="(max-width: 640px)"
        srcSet="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=600 1x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1200 2x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1800 3x"
      />
      <source
        media="(max-width: 860px)"
        srcSet="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=361 1x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=722 2x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1083 3x"
      />
      <img
        alt="Het zwarte schaap: Anglo Irish"
        src="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1280"
      />
    </picture>
  </figure>
</div>
`;

exports[`TextFrame should render with image align right correctly 2`] = `
<div
  className="inline-content text-frame right"
>
  <h3
    className="outline"
  >
    140%
  </h3>
  <figure
    className="fd-teaser-figure"
  >
    <picture>
      <source
        media="(max-width: 640px)"
        srcSet="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=600 1x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1200 2x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1800 3x"
      />
      <source
        media="(max-width: 860px)"
        srcSet="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=361 1x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=722 2x, https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1083 3x"
      />
      <img
        alt="Het zwarte schaap: Anglo Irish"
        src="https://fd-external-development.imgix.net/c4489dd02274747af8e77d1451eb1ca4b458e57e.jpg?auto=format&fm=jpg&fit=max&q=45&w=1280"
      />
    </picture>
  </figure>
</div>
`;
